[tool.poetry]
name = "tracker"
version = "0.1.0"
description = "Terminal portfolio tracker (TUI) using SQLite + yfinance"
authors = ["Your Name <you@example.com>"]
packages = [{ include = "tracker", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.9.0"
textual = "^0.22.0"
yfinance = "^0.2.25"
sqlmodel = "^0.0.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"

[tool.poetry.scripts]
# Expose Typer CLI so subcommands (like `check`) are available
tracker = "tracker.main:cli"